--- a/Portfolio/main.css
+++ b/Portfolio/main.css
@@ -1,6 +1,7 @@
 .all-expertise-card{
     display: grid;
     grid-template-columns: auto auto auto;
+    
 
 }
 
@@ -239,6 +240,7 @@ padding: 10px;
 
     .all-expertise-card{
         grid-template-columns: auto;
+        width: 100%;
     }
 
 
